# blog-diogenes-dev

./: .editorconfig  .env.example  .gitignore  .markdownlint.json  AGENTS.md  ARCHITECTURE.md  Justfile  PROMPT.md  go.mod  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts  wrangler.jsonc
.dev/: setup-ides.sh
docs/: .nav.yml  README.md  index.md
docs/assets/: extra.css  feedback.js
docs/blog/: .authors.yml
docs/blog/posts/: case-privacy-feedback-collectionn.md  concerns-when-running-code-in-someone-elses-computer.md  it-never-is-just-a-button.md  o-pesadelo-dos-pesadelos-the-mother-of-all-nightmares.md  o-pesadelo-dos-pesadelos.md  o-que-devemos-uns-ao-outros.md  the-cavalrys-not-coming-feedback-collection.md  the-mother-of-all-nightmares.md
docs/ci/: .nav.yml  DEPLOYMENT.md  index.md
docs/dev/: .nav.yml  AGENTS.md  CHATS.md  CHATs.md  LLM-PARAMS.md  LLM-PARAMs.md  PROTOCOL.md  SETUP.md  index.md
docs/dev/chats/: CHAT-0001.md  CHAT-0002.md  CHAT-0003.md  CHAT-0004.md  README.md  devindex.md
docs/meta/: .nav.yml  AGENTS.md  DEPLOYMENT.md  DEVELOPMENT.md  LLM-PARAMS.md  PROTOCOL.md  SLIPUPS.md  index.md
docs/meta/chats/: .nav.yml  CHAT-0004.md  CHAT-0005.md  CHAT-0006.md  devindex.md
docs/posts/: .nav.yml  001-o-surto-the-mother-of-all-nightmares.md  001-o-surto.md  001-the-mother-of-all-nightmares.md  002-o-que-devemos-um-ao-outro.md  002-o-que-devemos-uns-ao-outros.md  README.md  index.md
overrides/: blog-post.html
overrides/partials/: post-feedback.html
src/mkdocs_customize/: gen_pages.py  mermaid_init.js
(+5 files in other folders)
